--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -14,6 +14,7 @@
 body {
      border: 1px dotted gray;
      padding: 20px;
+
 }
 
 .jumbotron {
@@ -23,7 +24,8 @@ body {
 
 .jumbotron:after {
      content:"";
-     background: url("../images/lorempixel.jumbotron.jpeg");
+     background: url("../images/calc.jpg");
+     background-size:100%;
      opacity: 0.2;
      top: 0;
      left: 0;
@@ -46,10 +48,11 @@ body {
     width: 100px;
 }
 .Topic a{
-     margin-left: 375px;
+width:20%;
     background-color: #deebf7;
-    padding: 50px;
-    width: 200px;
+margin-right:auto;
+margin-left: auto;
+    text-align: center;
 }
 
 .TopicHeader{
@@ -57,4 +60,25 @@ body {
 }
 .PlayButton{
      text-align: center;
+
+}
+
+#playBtn{
+    font-size:50px;
+         font-weight: bolder;
+}
+
+.StatsButton{
+     text-align: center; 
+}
+
+.help{
+    top:10px;
+    right:10px;
+    position:fixed;
+}
+
+#helpBtn{
+color:red;
+     font-weight: bolder;
 }
