--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -10,10 +10,10 @@
 }
 
 /* this style exists to make it obvious that you've successfully linked
-   the CSS to the page. feel free to remove it once the link is working. */
+the CSS to the page. feel free to remove it once the link is working. */
 body {
-     border: 1px dotted gray;
-     padding: 20px;
+   border: 1px dotted gray;
+   padding: 20px;
 
 }
 
@@ -23,53 +23,53 @@ body {
 }
 
 .jumbotron:after {
-     content:"";
-     background: url("../images/calc.jpg");
-     background-size:100%;
-     opacity: 0.2;
-     top: 0;
-     left: 0;
-     bottom: 0;
-     right: 0;
-     position: absolute;
-     z-index: -1;	
+   content:"";
+   background: url("../images/calc.jpg");
+   background-size:100%;
+   opacity: 0.2;
+   top: 0;
+   left: 0;
+   bottom: 0;
+   right: 0;
+   position: absolute;
+   z-index: -1;	
 }
 
 .jumbotron p {
-     color: #6e6e6e;
+   color: #6e6e6e;
 }
 .jumbotron p.active {
-     color: #1f6ddd;
+   color: #1f6ddd;
 }
 .Friends a {
-     margin-left: 0px;
-    background-color: #deebf7;
-    padding: 10px;
-    width: 100px;
+   margin-left: 0px;
+   background-color: #deebf7;
+   padding: 10px;
+   width: 100px;
 }
 .Topic a{
-width:20%;
+    width:20%;
     background-color: #deebf7;
-margin-right:auto;
-margin-left: auto;
+    margin-right:auto;
+    margin-left: auto;
     text-align: center;
 }
 
 .TopicHeader{
-     text-align: center;
+   text-align: center;
 }
 .PlayButton{
-     text-align: center;
+   text-align: center;
 
 }
 
 #playBtn{
     font-size:50px;
-         font-weight: bolder;
+    font-weight: bolder;
 }
 
 .StatsButton{
-     text-align: center; 
+   text-align: center; 
 }
 
 .help{
@@ -79,6 +79,16 @@ margin-left: auto;
 }
 
 #helpBtn{
-color:red;
-     font-weight: bolder;
+    color:red;
+    font-weight: bolder;
+}
+
+.t1{
+    text-align: center;
+    font-weight: bolder;
+    font-variant: small-caps;
+}
+
+.mainButton{
+    text-align: center;
 }
