Signup and Login screens updated, password check added, field validation added, links updated

--- a/public/css/introHCI.css
+++ b/public/css/introHCI.css
@@ -83,6 +83,16 @@ body {
     position:fixed;
 }
 
+#toggleClick{
+  color:white;
+  text-align: center;
+  background-color: transparent;
+}
+
+#signupForm{
+  display:none;
+}
+
 #helpBtn{
     color:red;
     font-weight: bolder;
