--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Invalid Login!</title>	
+	<title>Logged In</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
 
   <body>
     <a href="/">Back</a>
-  	<h1>Invalid Login!</h1>
+  	<h1>Signed Up</h1>
 
 
   	
