--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,12 +22,12 @@
      <div class="container">
       <!-- h1 through h6 are headers. The higher the number, the smaller the header -->
       <!-- p means paragraph -->
-      <div class="jumbotron">
-        <div class="t1">	<h1>QuizWhiz</h1></div>
+      
+      <div class="t1">	<h1>QuizWhiz</h1></div>
 
 
 
-      </div>
+      
 
 
 
@@ -48,35 +48,58 @@
     <div class="mainButton">
 
 
-    <div class="container">
-      <form id="loginForm" role="form" method="get" action="/login">
-    
-        <div class="form-group">
-          <label for="name">Username:</label>
-          <input type="text" class="form-control" id="username" placeholder="Username" name="username">
-        </div>
-        <div class="form-group">
-          <label for="password">Password:</label>
-          <input type="password" class="form-control" id="password" placeholder="Password" name="password">
-        </div>
-        <input type="submit" id="loginBtn" class="btn btn-default" value="Login"></input>
-      </form>
-    </div>
+      <div class="container">
+        <form id="loginForm" role="form" method="get" onsubmit="return checkLogin(this)" action="/login">
 
-     <hr>
+          <div class="form-group">
+            <label for="name">Username</label>
+            <input type="text" class="form-control" id="username" placeholder="Username" name="username">
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" id="password" placeholder="Password" name="password">
+          </div>
+          <input type="submit" id="loginBtn" class="btn btn-default" value="Login"></input>
+        </form>
 
-      <a href="signup.html"><button id="Sign Up" type="button" class="btn btn-default">Sign Up</button></a>
- 
+
+        <form id="signupForm" role="form" method="get" onsubmit="return checkSignup(this)" action="/signup">
+
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" id="name" placeholder="Name" name="name">
+          </div>
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" id="username" placeholder="Username" name="username">
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" id="password" placeholder="Password" name="password">
+          </div>
+          <div class="form-group">
+            <label for="password2">Retype Password</label>
+            <input type="password" class="form-control" id="password2" placeholder="Retype Password" name="password2">
+          </div>
+          <input type="submit" id="signupBtn" class="btn btn-default" value="Signup"></input>
+        </form>
+
+      </div>
+
+      <hr>
+
+      <a href="#"><input  id="toggleClick" value="Sign Up Instead" ></input></a>
+
     </div>
 
     
 
     <div class="help">
-      <a href="help.html"><button id="helpBtn" type="button" class="btn btn-default">?</button></a>
+      <a href="/help"><button id="helpBtn" type="button" class="btn btn-default">?</button></a>
     </div>
 
-  <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/introHCI.js"></script>
-</body>
-</html>
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/introHCI.js"></script>
+  </body>
+  </html>
