--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -66,6 +66,8 @@
         <form id="signupForm" role="form" method="get" onsubmit="return checkSignup(this)" action="/signup">
 
           <div class="form-group">
+            <input type="radio" id = "userType" name="userType" value="student" checked=true> Student
+             <input type="radio" id="userType" name="userType" value="instructor"> Instructor<br>
             <label for="name">Name</label>
             <input type="text" class="form-control" id="name" placeholder="Name" name="name">
           </div>
