login status preserved, logout added, help page redirections

--- a/views/instructor.handlebars
+++ b/views/instructor.handlebars
@@ -15,7 +15,7 @@
           <h1>Welcome Professor!</h1>
           <h2>Instructor</h2>
 
-          <a href="/"><button id="testjs" class="btn btn-primary btn-lg">Logout</button></a>
+          <a href="/logout"><button id="testjs" class="btn btn-primary btn-lg">Logout</button></a>
         </div>
 
     
@@ -57,7 +57,7 @@
     </div>
 
     <div class="help">
-      <a href="help.html"><button id="helpBtn" type="button" class="btn btn-default">?</button></a>
+      <a href="/help"><button id="helpBtn" type="button" class="btn btn-default">?</button></a>
     </div>
   </form>
 
