--- a/views/student.handlebars
+++ b/views/student.handlebars
@@ -15,7 +15,7 @@
    <h1>Welcome!</h1>
    <h2>Student</h2>
 
-   <a href="/"><button id="testjs" class="btn btn-primary btn-lg">Logout</button></a>
+   <a href="/logout"><button id="testjs" class="btn btn-primary btn-lg">Logout</button></a>
  </div>
 
  <!--  this is friend section -->
