--- a/views/studentHelp.handlebars
+++ b/views/studentHelp.handlebars
@@ -23,9 +23,9 @@
       <!-- h1 through h6 are headers. The higher the number, the smaller the header -->
       <!-- p means paragraph -->
       
-      <div class="t1">	<h1>Help</h1></div>
+      <div class="t1">	<h1>Student Help</h1></div>
 
-      <a href="/"><button id="testjs" class="btn btn-primary btn-lg">Home</button></a>
+      <a href="/home"><button id="testjs" class="btn btn-primary btn-lg">Home</button></a>
 
       
 
