--- a/views/instructor.handlebars
+++ b/views/instructor.handlebars
@@ -12,7 +12,7 @@
         <!-- h1 through h6 are headers. The higher the number, the smaller the header -->
         <!-- p means paragraph -->
         <div class="jumbotron">
-          <h1>Welcome Professor!</h1>
+          <h1>Welcome {{loginStatus.name}}!</h1>
           <h2>Instructor</h2>
 
           <a href="/logout"><button id="testjs" class="btn btn-primary btn-lg">Logout</button></a>
