--- a/views/student.handlebars
+++ b/views/student.handlebars
@@ -14,6 +14,8 @@
   <div class="jumbotron">
    <h1>Welcome {{loginStatus.name}}!</h1>
    <h2>Student</h2>
+   <h3>Logged in as {{loginStatus.username}}</h3>
+   <img src={{loginStatus.image}} alt="profilePic" id="proPic">
 
    <a href="/logout"><button id="testjs" class="btn btn-primary btn-lg">Logout</button></a>
  </div>
