--- a/views/instructor.handlebars
+++ b/views/instructor.handlebars
@@ -3,10 +3,13 @@
 <html>
 </head>
 <meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/bootstrap-theme.min.css" rel="stylesheet">
 <link href="css/introHCI.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="css/style4.css" />
+<script src="js/modernizr.custom.63321.js"></script>
 <body>
   <div class="container">
     <!-- h1 through h6 are headers. The higher the number, the smaller the header -->
@@ -28,19 +31,42 @@
     </div>
 
 
-    <div class="Topic" id="project2">
-      <a href="" class="thumbnail">
-        <button id="courseBtn1" type="button" class="btn btn-default">MATH 10A</button> <br>
-        <button id="courseBtn2" type="button" class="btn btn-default">BILD 1</button>
-      </a>
+
+    <div class="container">                                          
+      <div class="dropdown">
+        <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Choose course:
+          <span class="caret"></span></button>
+          <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+            {{#each loginStatus.courses}}
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">{{courseID}}: {{courseName}}</a></li>
+            {{/each}}
+          </ul>
+        </div>
+      </div>
+
+
+  <div class="container"> 
+    <!-- Codrops top bar -->
+
+    <section class="main clearfix">
+
+      <div class="fleft">
+        <select id="cd-dropdown" class="cd-select">
+
+          <option value="-1" selected>Choose course:</option>
+          {{#each loginStatus.courses}}
+          <option value="1">{{courseID}}: {{courseName}}</option>
+          {{/each}}
+        </select>
+      </div>
+    </section>
+  </div><!-- /container -->
+
+
+
     </div>
 
-
-
-
-  </div>
-
-  <form id="projectForm" role="form">
+    <form id="projectForm" role="form">
     <!--<div class="form-group">
       <label for="project">Friend's name(last, first)</label>
       <select class="form-control" id="project">
@@ -64,8 +90,25 @@
   </form>
 
 
+
+
+
+
+
+
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/introHCI.js"></script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script type="text/javascript" src="js/jquery.dropdown.js"></script>
+  <script type="text/javascript">
+
+  $( function() {
+
+    $( '#cd-dropdown' ).dropdown();
+
+  });
+
+  </script>
 </body>
 </html>
