--- a/views/createQuiz.handlebars
+++ b/views/createQuiz.handlebars
@@ -24,10 +24,43 @@
       <!-- p means paragraph -->
       
       <div class="t1">	<h1>Create Quiz</h1></div>
+      <h3>{{status.loginStatus.currentCourseID}}: {{status.loginStatus.currentCourseName}}</h3>
 
       <a href="/instructor"><button id="testjs" class="btn btn-primary btn-lg">Home</button></a>
 
       
+
+      <div class="container">
+        <form id="addQuestions" role="form" method="get" onsubmit="return checkQuestions(this)" action="/addQuestions">
+
+          <div class="form-group">
+            <label for="question">Question</label>
+            <input type="text" class="form-control" id="question" placeholder="Question" name="question">
+          </div>
+          <div class="form-group">
+            <label for="text">Answer Choice A</label>
+            <input type="text" class="form-control" id="choiceA" placeholder="Answer Choice A" name="choiceA">
+          </div>
+          <div class="form-group">
+            <label for="text">Answer Choice B</label>
+            <input type="text" class="form-control" id="choiceB" placeholder="Answer Choice B" name="choiceB">
+          </div>
+          <div class="form-group">
+            <label for="text">Answer Choice C</label>
+            <input type="text" class="form-control" id="choiceC" placeholder="Answer Choice C" name="choiceC">
+          </div>
+          <div class="form-group">
+            <label for="text">Answer Choice D</label>
+            <input type="text" class="form-control" id="choiceD" placeholder="Answer Choice D" name="choiceD">
+          </div>
+          <input type="radio" id = "correctAnswer" name="correctAnswer" value="A" checked=true> A
+          <input type="radio" id = "correctAnswer" name="correctAnswer" value="B"> B
+          <input type="radio" id = "correctAnswer" name="correctAnswer" value="C"> C
+          <input type="radio" id = "correctAnswer" name="correctAnswer" value="D"> D
+<br>
+          <input type="submit" id="addQuestionsBtn" class="btn btn-default" value="Add Question"></input>
+        </form>
+      </div>
 
 
 
