--- a/views/student.handlebars
+++ b/views/student.handlebars
@@ -7,6 +7,8 @@
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/bootstrap-theme.min.css" rel="stylesheet">
 <link href="css/introHCI.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="css/style4.css" />
+<script src="js/modernizr.custom.63321.js"></script>
 <body>
  <div class="container">
   <!-- h1 through h6 are headers. The higher the number, the smaller the header -->
@@ -15,64 +17,64 @@
    <h1>Welcome {{loginStatus.name}}!</h1>
    <h2>Student</h2>
    <h3>Logged in as {{loginStatus.username}}</h3>
+     <p>Current Course: {{loginStatus.currentCourseID}} {{loginStatus.currentCourseName}}</p>
    <img src={{loginStatus.image}} alt="profilePic" id="proPic">
 
    <a href="/logout"><button id="testjs" class="btn btn-primary btn-lg">Logout</button></a>
  </div>
 
- <!--  this is friend section -->
- <h4>Friends</h4>
-
- <div class="Friends" id="project1">
-   <a href="" class="thumbnail">
-    <img src="" alt="Jason" class="img">
-    <img src="" alt="Luis" class="img">
-    <img src="" alt="Xiaoping" class="img">
-  </a>
-</div>
-
-<!--  this is topic section -->
-<div class="TopicHeader">
- <h4>Class/Subject</h4>
-</div>
 
 
-<div class="Topic" id="project2">
- <a href="" class="thumbnail">
-  <button id="courseBtn1" type="button" class="btn btn-default">MATH 10A</button> 
-  <button id="courseBtn2" type="button" class="btn btn-default">BILD 1</button>
-</a>
-</div>
+    <form action="/selectCourse" method="post" onSubmit="return updateSelectedCourse(this)">
 
+      <select name="courseDropdown" id="cd-dropdown" class="cd-select">
+        <option value=-1 selected>Choose course:</option>
+        {{#each loginStatus.courses}}
+        <option value="{{courseID}}" >{{courseID}}: {{courseName}}</option>
+        {{/each}}
 
-
-
-</div>
-
-
-<form id="projectForm" role="form">
-    <!--<div class="form-group">
-      <label for="project">Friend's name(last, first)</label>
-      <select class="form-control" id="project">
-        <option value="#project1"></option>
- 
       </select>
-    </div>
-    <![endif]-->  
-    <div class="PlayButton">
-      <a href="/play"><button id="playBtn" type="button" class="btn btn-default">PLAY</button></a>
-    </div>
+      <div class="mainButton">
+        <button type="submit" class="btn btn-default centered">Select Course</button>
+      </div>
 
-    <div class="StatsButton"><a href="/myStats"><button id="statsBtn" type="button" class="btn btn-default">My Stats</button></a></div>
+      <hr>
+      <br>
+
+      <div class="mainButton">
+        <a href="/play" ><button onClick="return checkSelectedCourse()" type="button" class="btn btn-default">Play</button></a>
+        <br><br>
+        <a href="/myStats"><button  type="button" class="btn btn-default">My Stats</button></a>
+
+
+      </div>
+    </form>
+
+
+</div>
+
+
+
 
     <div class="help">
       <a href="/help"><button id="helpBtn" type="button" class="btn btn-default">?</button></a>
     </div>
-  </form>
+
 
 
   <script src="https://code.jquery.com/jquery.js"></script>
+
   <script src="js/bootstrap.min.js"></script>
   <script src="js/introHCI.js"></script>
+  <script type="text/javascript" src="js/jquery.dropdown.js"></script>
+  <script type="text/javascript">
+
+  $( function() {
+
+    $( '#cd-dropdown' ).dropdown();
+
+  });
+
+  </script>
 </body>
 </html>
