help sections added

--- a/views/instructorHelp.handlebars
+++ b/views/instructorHelp.handlebars
@@ -28,8 +28,14 @@
       <a href="/home"><button id="testjs" class="btn btn-primary btn-lg">Home</button></a>
 
       
+      
+      <p>
+        About: QuizWhiz is an app intended to supplement student learning by testing the student’s knowledge in their current classes by having them compete against fellow students in an engaging trivia game. These topics are personalized to cater to students learning goals through collaboration with their instructors who are actively creating new quiz sets that allow the students to better understand the materials covered in their classes.
+      </p><br>
 
-
+        <p>
+          Instructor account: The instructor account allows the user to create quizzes by providing questions and answers that will be generated under the subject which they teach. The instructor has access to all quizzes they created, a list of all of the students in their class who are using QuizWhiz, statistics of their class as a whole, and student feedback on their quizzes.</p>
+          <p>
 
 
 
