--- a/views/studentHelp.handlebars
+++ b/views/studentHelp.handlebars
@@ -27,9 +27,12 @@
 
       <a href="/home"><button id="testjs" class="btn btn-primary btn-lg">Home</button></a>
 
-      
+            
+      <p>
+        About: QuizWhiz is an app intended to supplement student learning by testing the student’s knowledge in their current classes by having them compete against fellow students in an engaging trivia game. These topics are personalized to cater to students learning goals through collaboration with their instructors who are actively creating new quiz sets that allow the students to better understand the materials covered in their classes.
+      </p><br>
 
-
+  
 
 
 
