--- a/views/student.handlebars
+++ b/views/student.handlebars
@@ -17,7 +17,7 @@
    <h1>Welcome {{loginStatus.name}}!</h1>
    <h2>Student</h2>
    <h3>Logged in as {{loginStatus.username}}</h3>
-     <p>Current Course: {{loginStatus.currentCourseID}} {{loginStatus.currentCourseName}}</p>
+   <p>Current Course: {{loginStatus.currentCourseID}} {{loginStatus.currentCourseName}}</p>
    <img src={{loginStatus.image}} alt="profilePic" id="proPic">
 
    <a href="/logout"><button id="testjs" class="btn btn-primary btn-lg">Logout</button></a>
@@ -25,30 +25,24 @@
 
 
 
-    <form action="/selectCourse" method="post" onSubmit="return updateSelectedCourse(this)">
+ <form action="/selectCourse" method="post" onSubmit="return updateSelectedCourse(this)">
 
-      <select name="courseDropdown" id="cd-dropdown" class="cd-select">
-        <option value=-1 selected>Choose course:</option>
-        {{#each loginStatus.courses}}
-        <option value="{{courseID}}" >{{courseID}}: {{courseName}}</option>
-        {{/each}}
+  <select name="courseDropdown" id="cd-dropdown" class="cd-select">
+    <option value=-1 selected>Choose course:</option>
+    {{#each loginStatus.courses}}
+    <option value="{{courseID}}" >{{courseID}}: {{courseName}}</option>
+    {{/each}}
 
-      </select>
-      <div class="mainButton">
-        <button type="submit" class="btn btn-default centered">Select Course</button>
-      </div>
-
-      <hr>
-      <br>
-
-      <div class="mainButton">
-        <a href="/play" ><button onClick="return checkSelectedCourse()" type="button" class="btn btn-default">Play</button></a>
-        <br><br>
-        <a href="/myStats"><button  type="button" class="btn btn-default">My Stats</button></a>
+  </select>
+  <div class="mainButton">
+    <button type="submit" onClick="return selectAction('play')" type="button" class="btn btn-default">Play</button>
+   <button type="submit"  onClick="return selectAction('myStats')" type="button" class="btn btn-default">My Stats</button>
+ </div>
+ <hr>
+ <br>
 
 
-      </div>
-    </form>
+</form>
 
 
 </div>
@@ -56,25 +50,25 @@
 
 
 
-    <div class="help">
-      <a href="/help"><button id="helpBtn" type="button" class="btn btn-default">?</button></a>
-    </div>
+<div class="help">
+  <a href="/help"><button id="helpBtn" type="button" class="btn btn-default">?</button></a>
+</div>
 
 
 
-  <script src="https://code.jquery.com/jquery.js"></script>
+<script src="https://code.jquery.com/jquery.js"></script>
 
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/introHCI.js"></script>
-  <script type="text/javascript" src="js/jquery.dropdown.js"></script>
-  <script type="text/javascript">
+<script src="js/bootstrap.min.js"></script>
+<script src="js/introHCI.js"></script>
+<script type="text/javascript" src="js/jquery.dropdown.js"></script>
+<script type="text/javascript">
 
-  $( function() {
+$( function() {
 
-    $( '#cd-dropdown' ).dropdown();
+  $( '#cd-dropdown' ).dropdown();
 
-  });
+});
 
-  </script>
+</script>
 </body>
 </html>
