--- a/views/student.handlebars
+++ b/views/student.handlebars
@@ -10,50 +10,60 @@
 <link rel="stylesheet" type="text/css" href="css/style4.css" />
 <script src="js/modernizr.custom.63321.js"></script>
 <body>
- <div class="container">
-  <!-- h1 through h6 are headers. The higher the number, the smaller the header -->
-  <!-- p means paragraph -->
-  <div class="jumbotron">
-   <h1>Welcome {{loginStatus.name}}!</h1>
-   <h2>Student</h2>
-   <h3>Logged in as {{loginStatus.username}}</h3>
-
-   <img src={{loginStatus.image}} onclick="changeProfilePicture()" alt="profilePic" class="proPic">
 
 
-  <a href="/logout"><button id="testjs" class="btn btn-primary btn-lg">Logout</button></a>
+  <nav class="navbar navbar-inverse navbar-fixed-top" id="nav">
+    <div class="container-fluid">
+      <a class="glyphicon glyphicon-home navbar-brand navbar-left" href="/home"> Home</a>
+      <a class="glyphicon glyphicon-info-sign navbar-brand navbar-right" href="/help"> Help</a>
+      <a class="glyphicon glyphicon-log-out navbar-brand navbar-right" href="/logout"> Logout</a>
+    </div>
+  </nav>
+
+
+
+  <div class="container">
+    <!-- h1 through h6 are headers. The higher the number, the smaller the header -->
+    <!-- p means paragraph -->
+    <div class="jumbotron">
+     <h1>Welcome {{loginStatus.name}}!</h1>
+     <h2>Student</h2>
+     <h3>Logged in as {{loginStatus.username}}</h3>
+
+     <img src={{loginStatus.image}} onclick="changeProfilePicture()" alt="profilePic" class="proPic">
+
+
+
+   </div>
+
+
+
+   <form action="/selectCourse" method="post" onSubmit="return updateSelectedCourse(this)">
+
+    <select name="courseDropdown" id="cd-dropdown" class="cd-select">
+      <option value=-1 selected>Choose course:</option>
+      {{#each loginStatus.courses}}
+      <option value="{{courseID}}" >{{courseID}}: {{courseName}}</option>
+      {{/each}}
+
+    </select>
+    <div class="mainButton">
+      <button type="submit" onClick="return selectAction('play')" type="button" class="btn btn-default">Play</button>
+      <button type="submit"  onClick="return selectAction('myStats')" type="button" class="btn btn-default">My Stats</button>
+    </div>
+    <hr>
+    <br>
+
+
+  </form>
+
+
 </div>
 
 
 
-<form action="/selectCourse" method="post" onSubmit="return updateSelectedCourse(this)">
-
-  <select name="courseDropdown" id="cd-dropdown" class="cd-select">
-    <option value=-1 selected>Choose course:</option>
-    {{#each loginStatus.courses}}
-    <option value="{{courseID}}" >{{courseID}}: {{courseName}}</option>
-    {{/each}}
-
-  </select>
-  <div class="mainButton">
-    <button type="submit" onClick="return selectAction('play')" type="button" class="btn btn-default">Play</button>
-    <button type="submit"  onClick="return selectAction('myStats')" type="button" class="btn btn-default">My Stats</button>
-  </div>
-  <hr>
-  <br>
 
 
-</form>
-
-
-</div>
-
-
-
-
-<div class="help">
-  <a href="/help"><button id="helpBtn" type="button" class="btn btn-default">?</button></a>
-</div>
 
 
 
