Added navbar to all pages, adjusted whitespace in navbar, adjusted spacing in all page headers

--- a/public/css/introHCI.css
+++ b/public/css/introHCI.css
@@ -124,3 +124,11 @@ body {
     }
 }
 
+.glyphicon {
+  margin-right: 0px;
+  vertical-align: middle;
+  letter-spacing: 0px;
+white-space: nowrap;
+word-spacing: -10px;
+}
+
