--- a/views/instructorHelp.handlebars
+++ b/views/instructorHelp.handlebars
@@ -19,15 +19,22 @@
     </head>
 
     <body>
+  <nav class="navbar navbar-inverse navbar-fixed-top" id="nav">
+    <div class="container-fluid">
+      <a class="glyphicon glyphicon-home navbar-brand navbar-left" href="/home"> Home</a>
+      <a class="glyphicon glyphicon-info-sign navbar-brand navbar-left" href="/help"> Help</a>
+      <a class="glyphicon glyphicon-log-out navbar-brand navbar-left" href="/logout"> Logout</a>
+      <span class = "glyphicon glyphicon-user navbar-brand navbar-right"> {{loginStatus.username}}</span>
+    </div>
+  </nav>
+
      <div class="container">
       <!-- h1 through h6 are headers. The higher the number, the smaller the header -->
       <!-- p means paragraph -->
-      
+       <br>
       <div class="t1">	<h1>Instructor Help</h1></div>
 
-      <a href="/home"><button id="testjs" class="btn btn-primary btn-lg">Home</button></a>
-
-      
+ 
       
       <p>
         About: QuizWhiz is an app intended to supplement student learning by testing the student’s knowledge in their current classes by having them compete against fellow students in an engaging trivia game. These topics are personalized to cater to students learning goals through collaboration with their instructors who are actively creating new quiz sets that allow the students to better understand the materials covered in their classes.
