toggle click type changed to button for mobile

--- a/public/css/introHCI.css
+++ b/public/css/introHCI.css
@@ -88,7 +88,7 @@ body {
 }
 
 #toggleClick{
-  color:white;
+  color:#B3DBE8;
   text-align: center;
   background-color: transparent;
     cursor: pointer;
