--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -98,7 +98,7 @@
 
       <hr>
 
-      <a href="#"><input id="toggleClick" value="Sign Up Instead" ></input></a>
+      <a href="#"><input type="button" id="toggleClick" value="Sign Up Instead" ></input></a>
 
     </div>
 
