createQuiz changed to addQuestion, prevent erasing previous questions, rearranged play page q/a layout

--- a/views/createQuiz.handlebars
+++ b/views/createQuiz.handlebars
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Create Quiz</title>	
+	<title>Add Question</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
       <!-- h1 through h6 are headers. The higher the number, the smaller the header -->
       <!-- p means paragraph -->
       <br> 
-      <div class="t1">	<h1>Create Quiz</h1></div>
+      <div class="t1">	<h1>Add Question</h1></div>
       <h3>{{status.loginStatus.currentCourseID}}: {{status.loginStatus.currentCourseName}}</h3>
 
       
