--- a/views/instructor.handlebars
+++ b/views/instructor.handlebars
@@ -50,7 +50,7 @@
 
       </select>
       <div class="mainButton">
-       <button type="submit" id="instructorActionBtn" onClick="return selectAction('createQuiz')" type="button" class="btn btn-default">Create Quiz</button>
+       <button type="submit" id="instructorActionBtn" onClick="return selectAction('createQuiz')" type="button" class="btn btn-default">Add Question</button>
 
        <button type="submit" id="instructorActionBtn" onClick="return selectAction('classStats')" type="button" class="btn btn-default">Class Stats</button>
 
