Added best scores to myStats page

--- a/views/endOfMatch.handlebars
+++ b/views/endOfMatch.handlebars
@@ -39,29 +39,33 @@
     <!-- h1 through h6 are headers. The higher the number, the smaller the header -->
     <!-- p means paragraph -->
     <div class="jumbotron">
-     <h1>You Won!</h1>
-     <h2>You scored {{status.loginStatus.score}} out of {{status.loginStatus.totalScore}}.</h2>
-      <h2>Your best score is {{bestScore}}.</h2>
+      <div class="centered">
+       <h1>You Won!</h1>
+       <h3>Score: {{status.loginStatus.score}} / {{status.loginStatus.totalScore}}.</h3>
+       <h3>Your best score is {{bestScore}}.</h3>
+     </div>
    </div>
  </div>
 
 
-    <div class="mainButton">
-      <a href="/play"><button class="btn btn-default">Play Again</button></a>
-    </div>
+
+
+ <div class="mainButton">
+  <a href="/play"><button class="btn btn-default">Play Again</button></a>
+</div>
 
 
 
 
 
- <script src="https://code.jquery.com/jquery.js"></script>
- <script src="css3-preloader-transition-start/js/main.js"></script>
- <script src="css3-preloader-transition-finish/js/main.js"></script>
- <script src="js/bootstrap.min.js"></script>
- <script src="js/introHCI.js"></script>
- <script type="text/javascript">
+<script src="https://code.jquery.com/jquery.js"></script>
+<script src="css3-preloader-transition-start/js/main.js"></script>
+<script src="css3-preloader-transition-finish/js/main.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/introHCI.js"></script>
+<script type="text/javascript">
 
 
- </script>
+</script>
 </body>
 </html>
