Added score tracker to play screens, added opponent score and result to eom screen

--- a/public/css/introHCI.css
+++ b/public/css/introHCI.css
@@ -144,3 +144,21 @@ body {
 .studentAnswer{
   font-size: 22px;
 }
+
+.score{
+  text-align: center;
+  color:#B3DBE8;
+}
+
+.userScore{
+   color:#B3DBFA; 
+}
+
+.opponentScore{
+   color:#FABDB3; 
+}
+
+.bestScore h3{
+  font-weight: lighter;
+  font-size: 90%; 
+}
