--- a/views/endOfMatch.handlebars
+++ b/views/endOfMatch.handlebars
@@ -40,9 +40,10 @@
     <!-- p means paragraph -->
     <div class="jumbotron">
       <div class="centered">
-       <h1>You Won!</h1>
-       <h3>Score: {{status.loginStatus.score}} / {{status.loginStatus.totalScore}}.</h3>
-       <h3>Your best score is {{bestScore}}.</h3>
+       <h1>{{status.loginStatus.result}}</h1>
+       <div class = "userScore"> <h3>{{status.loginStatus.name}}: {{status.loginStatus.score}} / {{status.loginStatus.totalScore}}.</h3> </div>
+       <div class= "opponentScore"> <h3>Opponent: {{status.loginStatus.opponentScore}} / {{status.loginStatus.totalScore}}.</h3> </div>
+       <div class = "bestScore"> <h3>Your best score is {{bestScore}}.</h3></div>
      </div>
    </div>
  </div>
