Added check for user reloading eom screen

--- a/views/endOfMatch.handlebars
+++ b/views/endOfMatch.handlebars
@@ -55,7 +55,12 @@
   <a href="/play"><button class="btn btn-default">Play Again</button></a>
 </div>
 
-
+<script type="text/javascript">
+window.onbeforeunload = function()
+{
+  return "Do not refresh this page please.";
+}
+</script>
 
 
 
