Added class stats data/page, added sortable table

--- a/views/endOfMatch.handlebars
+++ b/views/endOfMatch.handlebars
@@ -53,6 +53,8 @@
 
  <div class="mainButton">
   <a href="/play"><button class="btn btn-default">Play Again</button></a>
+  <br>  <br>  
+  <a href="/home"><button class="btn btn-default">Home</button></a>
 </div>
 
 <script type="text/javascript">
