add courses feature implemented

--- a/views/student.handlebars
+++ b/views/student.handlebars
@@ -54,10 +54,12 @@
     </div>
     <hr>
     <br>
-
-
   </form>
 
+
+  <div class="mainButton">
+    <a href="/addCourse"> <button class="btn btn-default">Add New Course</button> </a>
+  </div>
 
 </div>
 
