--- a/views/student.handlebars
+++ b/views/student.handlebars
@@ -58,7 +58,7 @@
 
 
   <div class="mainButton">
-    <a href="/addCourse"> <button class="btn btn-default">Add New Course</button> </a>
+    <a href="/addCourse"> <button class="btn btn-default">Add New Courses</button> </a>
   </div>
 
 </div>
